added new icons and auto record program lists, updated the game filter

--- a/CC-Electron/src/renderer/styles/editor-section.css
+++ b/CC-Electron/src/renderer/styles/editor-section.css
@@ -13,6 +13,10 @@
     background-color: var(--vctr-bgcolor);
 }
 
+#ctr-video:fullscreen {
+    border-radius: 0;
+}
+
 #player-video {
     border-radius: inherit;
     display: block;
