--- a/CC-Electron/src/renderer/styles/settings-section.css
+++ b/CC-Electron/src/renderer/styles/settings-section.css
@@ -243,6 +243,8 @@
     
     background-color: var(--praddbtn-bgcolor);
     transition: var(--praddbtn-transition);
+
+    cursor: pointer;
 }
 
 #add-btn-programs:hover {
